--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -111,7 +111,7 @@ jobs:
     runs-on: [self-hosted, linux, main]
     outputs:
       ecr_token: ${{ steps.ecr.outputs.token }}
-      ecr_repositoy: ${{ steps.ecr.outputs.repositoy }}
+      ecr_repository: ${{ steps.ecr.outputs.repository }}
       ecr_username: ${{ steps.ecr.outputs.username }}
       ecr_password: ${{ steps.ecr.outputs.password }}
       endpoint: ${{ steps.paramater.outputs.host }}
