--- a/lint/action.yml
+++ b/lint/action.yml
@@ -27,7 +27,7 @@ runs:
       with:
         args: -E ${{ inputs.linter }} --timeout 2m0s
         version: latest
-        skip-pkg-cache: false
+        skip-pkg-cache: true
 
     - name: Node lint
       if: ${{ inputs.language == 'node' }}
