--- a/lang-setup/action.yml
+++ b/lang-setup/action.yml
@@ -82,7 +82,7 @@ runs:
         key: ${{ runner.os }}-${{ inputs.language }}-${{ inputs.repository }}-${{ hashFiles('**/package-lock.json') }}
     - name: Download node modules
       if: ${{ inputs.language == 'node' }}
-      run: npm install
+      run: yarn install
       shell: bash
 
     # Flutter setup and download packages
