--- a/integration-test/action.yml
+++ b/integration-test/action.yml
@@ -94,6 +94,18 @@ runs:
         touch $HOME/.ack-ginkgo-rc
         make integration-test
 
+    - name: Run node unit test
+      if: ${{ inputs.language == 'node' }}
+      uses: docker://mcr.microsoft.com/playwright:focal
+      with:
+        args: >-
+          yarn test:e2e --reporter list
+          --output /tmp/test-reports
+          --project Galaxy-S5
+          --project iphone-se
+          --project iphone-12-pro-max
+          --project ipad-mini
+
     - name: Run flutter integration test
       if: ${{ inputs.language == 'flutter' }}
       shell: bash
