--- a/.github/workflows/dime-ci-cd.yml
+++ b/.github/workflows/dime-ci-cd.yml
@@ -217,7 +217,6 @@ jobs:
     if: ${{ inputs.code_lang == 'golang' }}
     needs: setup
     runs-on: [self-hosted, linux, sit]
-    continue-on-error: true
     container:
       image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/kkp-dfs/ubuntu:21.04
       credentials:
@@ -253,6 +252,7 @@ jobs:
       - unit-test
       - integration-test
     runs-on: [self-hosted, linux,  main]
+    if: ${{ (inputs.code_lang == 'golang' && success()) || (inputs.code_lang == 'node' && needs.lint.result == 'success') }}
     container:
       image: 915060398631.dkr.ecr.ap-southeast-1.amazonaws.com/kkp-dfs/ubuntu:21.04
       credentials:
