--- a/db-migration/action.yaml
+++ b/db-migration/action.yaml
@@ -2,6 +2,10 @@ name: Database Migration
 description: Migrate database schema and data
 
 inputs:
+  environment:
+    description: Environment that would like to deploy services
+    required: true
+    default: sit
   application_name:
     description: Name of application
     required: true
@@ -37,7 +41,7 @@ runs:
         git fetch
         git reset ${{ inputs.helm_ref }} --hard
 
-        yaml-merge values/${{ inputs.application_name }}/values.yaml values/${{ inputs.application_name }}/values-sit.yaml > values.yaml
+        yaml-merge values/${{ inputs.application_name }}/values.yaml values/${{ inputs.application_name }}/values-${{ inputs.environment }}.yaml > values.yaml
         VAULT_USERNAME=$(cat values.yaml | yq eval '.application.values.secrets.default.data.DB_USERNAME' - | sed -e 's/vault:/https:\/\/vault.mydime.tech\/v1\//g')
         VAULT_PASSWORD=$(cat values.yaml | yq eval '.application.values.secrets.default.data.DB_PASSWORD' - | sed -e 's/vault:/https:\/\/vault.mydime.tech\/v1\//g')
         USERNAME_KEY=$(echo $VAULT_USERNAME | cut -d '#' -f2)
