--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -38,8 +38,8 @@ jobs:
     name: Install dependencies and keep caches
     runs-on: [self-hosted, linux, main]
     outputs:
-      ecr_username: ${{ steps.credentials.outputs.username }}
-      ecr_password: ${{ steps.credentials.outputs.password }}
+      ecr_username: ${{ steps.ecr.outputs.username }}
+      ecr_password: ${{ steps.ecr.outputs.password }}
     steps:
       - uses: kkp-dfs/dime-github-actions-workflows/lang-setup@revise-pr
         with:
