--- a/.github/workflows/dime-app.yml
+++ b/.github/workflows/dime-app.yml
@@ -74,7 +74,7 @@ jobs:
           language: flutter
           application_name: ${{ inputs.application_name }}
           slack_channel: ${{ inputs.slack_channel }}
-          slack_webhook: ${{ inputs.slack_webhook }}
+          slack_webhook: ${{ secrets.slack_webhook }}
 
   unit-test:
     name: Run unit testing
@@ -120,4 +120,4 @@ jobs:
           minimum_coverage: 80
           application_name: ${{ inputs.application_name }}
           slack_channel: ${{ inputs.slack_channel }}
-          slack_webhook: ${{ inputs.slack_webhook }}
+          slack_webhook: ${{ secrets.slack_webhook }}
